--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
             "database/factories"
         ],
         "files": [
-            "app/helpers.php"
+            "app/helpers.php",
+            "app/invoiceHelper.php"
         ]
     },
     "autoload-dev": {
